conformance/tests/httproute-redirect-port copy.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: redirect
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /port
    filters:
    - type: RequestRedirect
      requestRedirect:
        port: 8083
  - matches:
    - path:
        type: PathPrefix
        value: /host-and-port
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: example.org
        port: 8083
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /port-and-status
    filters:
    - type: RequestRedirect
      requestRedirect:
        port: 8083
        statusCode: 301
    backendRefs:
    - name: infra-backend-v1
      port: 8080
